# devel

./: .gitignore  configure.sh
config/: archlinux.cmake  levante.cmake  uhhpc-c.cmake  uhhpc.cmake
examples/: Makefile  README.md  check_run.sh
examples/Case01/: dns.out.ref  tlab.ini
examples/Case02/: dns.out.ref  tlab.ini
examples/Case03/: dns.out.ref  tlab.ini
examples/Case05/: tlab.ini
examples/Case06/: tlab.ini
examples/Case07/: dns.out.ref  tlab.ini
examples/Case08/: dns.out.ref  tlab.ini
examples/Case08-3d/: dns.out.ref  tlab.ini
examples/Case10/: tlab.ini
examples/Case11/: dns.out.ref  tlab.ini
examples/Case12/: tlab.ini
examples/Case13/: tlab.ini
examples/Case21/: dns.out.ref  tlab.ini
examples/Case25/: tlab.ini
examples/Case25-3d/: dns.out.ref  tlab.ini
examples/Case26/: dns.out.ref  tlab.ini
examples/Case27/: dns.out.ref  tlab.ini
examples/Case28/: tlab.ini
examples/Case31/: dns.out.ref  tlab.ini
examples/Case32/: dns.out.ref  tlab.ini
examples/Case32-3d/: dns.out.ref  tlab.ini
examples/Case51/: tlab.ini
examples/Case52/: tlab.ini
examples/Case61/: tlab.ini
examples/Case62/: tlab.ini
examples/Case63/: tlab.ini
examples/Case64/: tlab.ini
examples/Case64-3d/: dns.out.ref  tlab.ini
scripts/python/: PlotAverages.py  fields2nc.py
src/: CMakeLists.txt
src/base/: io_ascii.f90  io_fields.f90  tlab_constants.f90  tlab_grid.f90  tlab_initialize_parameters.f90  tlab_memory.f90  tlab_mpi_procs.f90  tlab_mpi_transpose.f90  tlab_mpi_vars.f90  tlab_workflow.f90
src/fdm/: fdm.f90  fdm_base.f90  fdm_derivative.f90  fdm_integral.f90  fdm_interpolate.f90
src/include/: dns_error.h
src/mappings/: CMakeLists.txt  fi_fluctiation.f90  fi_gate.f90  fi_gradient.f90  fi_strain.f90  fi_vectorcalculus.f90  fi_vorticity.f90
src/operators/: CMakeLists.txt  opr_check.f90  opr_elliptic.f90  opr_fourier.f90  opr_odes.f90  opr_partial.f90
src/physics/: CMakeLists.txt  gravity.f90  largescaleforcing.f90  microphysics.f90  navierstokes.f90  nse_burgers.f90  nse_pressure.f90  opr_burgers.f90  radiation.f90  specialforcing.f90  tlab_background.f90  tlab_consistency_check.f90  tlab_diagnostic.f90  tlab_sources.f90
src/statistics/: CMakeLists.txt  avg_flow_xz.f90  avg_scal_xz.f90  avg_xz.f90  io_averages.f90
src/thermodynamics/: thermo_airwater.f90  thermo_anelastic.f90  thermo_base.f90  thermo_compressible.f90  thermodynamics.f90
src/tools/: CMakeLists.txt
src/tools/postprocessing/: averages.f90  visuals.f90
src/tools/preprocessing/iniflow/: flow_local.f90  flow_main.f90
src/tools/preprocessing/inigrid/: grid_main.f90
src/tools/preprocessing/inirand/: rand_local.f90  rand_main.f90
src/tools/preprocessing/iniscal/: scal_local.f90  scal_main.f90
src/tools/simulation/: boundary_bcs.f90  buffer.f90  dns_control.f90  dns_local.f90  dns_main.f90  nse_anelastic.f90  nse_boussinesq.f90  nse_incompressible.f90  rhs_global_incompressible_1.f90  statistics.f90  time.f90  timemarching.f90
src/utils/: averages.f90  discrete.f90  linear3.f90  linear5.f90  lists.f90  locate_in_line.f90  profiles.f90  reductions.f90  tensor.f90
src/valid/: CMakeLists.txt
src/valid/elliptic/: velliptic.f90
src/valid/fdm/: vintegral.f90  vpartial3d.f90
